# fair_token

./: .dockerignore  .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  VERIFY.md  sha256.txt
.github/workflows/: verify.yml
IDL/: fair_token.json
mintscripts/: createmint.ts  force_lock_metadata.ts  lock_finalized.ts  lock_v2.ts  prepare_mint.ts  view_metadata_raw.ts
programs/fair_token/: Cargo.toml
programs/fair_token/src/: lib.rs
scripts/: anchor-verify.sh  verifiable-build.sh
tests/: fair_token.ts  init_raw.ts
