[package]
name = "fair_token"
version = "0.1.0"
edition = "2021"

[lib]
name = "fair_token"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = { version = "0.31.1", features = ["token", "metadata"] }
